Fix div collapse, add clearfix

--- a/themes/atw/style.css
+++ b/themes/atw/style.css
@@ -219,6 +219,7 @@ div.photo:nth-child(even) {
 	-webkit-transform: rotate(10deg);
 	-moz-transform: rotate(10deg);
 	transform: rotate(10deg);
+	margin-top: -30px;
 }
 .polariod {
 	-webkit-box-shadow: 0 3px 6px rgba(0,0,0, .25);
@@ -228,6 +229,33 @@ div.photo:nth-child(even) {
 	height: auto;
 }
 
+/* Grid */
+
+[class*='grid'] {
+	float: left;
+	position: relative;
+	padding: 0 20px 0 0;
+}
+
+.omega {
+	padding-right: 0;
+}
+
+.omega::after {
+	content: '';
+	display: table;
+	clear: both;
+}
+
+@media only screen and (min-width: 768px) {
+	.grid1-3 {
+		width: 33.3%;
+	}
+	
+	.grid2-3 {
+		width: 66.6%
+	}
+}
 
 /*------------------------------------*\
     IMAGES
